<resources>
    <string name="app_name">GamingCatalog</string>
    <string name="tab_games">Games</string>
    <string name="tab_upcoming">Upcoming</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_game_detail">Detail</string>
    <string name="topbar_search">Search</string>

    <string name="game_detail_release_title">Released date</string>
    <string name="game_detail_genre_title">Genres</string>
    <string name="game_detail_developer_title">Developer</string>
    <string name="game_detail_platforms_title">Platforms</string>
    <string name="game_detail_website_title">Site</string>

    <string name="search_hint">Search a game</string>
    <string name="search_result">Search for: %1$s</string>

    <string name="error_title">Something went wrong</string>
    <string name="error_description">An error occurred, please try again later</string>
    <string name="error_retry">Try again</string>

    <string name="empty_title">Save your favorite games</string>
    <string name="empty_description">Your favorites list will be shown here</string>
</resources>
