<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/games_list_fragment">

    <fragment
        android:id="@+id/games_list_fragment"
        android:name="com.rafagnin.gaming.ui.fragment.GamesListFragment"
        android:label="@string/tab_games" />

    <fragment
        android:id="@+id/upcoming_games_fragment"
        android:name="com.rafagnin.gaming.ui.fragment.UpcomingGamesFragment"
        android:label="@string/tab_upcoming" />

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.rafagnin.gaming.ui.fragment.ProfileFragment"
        android:label="@string/tab_profile" />
</navigation>
